tests/toy/neg/001023_mutation.toylang
program a = { if a then sleep else 0 sleep; } .
